# AviUtl-WebPFileReader-Plugin

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Readme.md
.github/workflows/: CI.yml
src/: FileHandle.cpp  FileHandle.hpp  config.tmp  main.cpp  main.def  main.hpp
